ensure whitespace displayed for report data

--- a/client/src/core/client/admin/routes/Reports/SingleReportRoute.css
+++ b/client/src/core/client/admin/routes/Reports/SingleReportRoute.css
@@ -140,4 +140,5 @@
   color: var(--palette-grey-500);
   font-size: var(--font-size-2);
   font-weight: var(--font-weight-primary-regular);
+  white-space: pre-wrap;
 }
